# gadgets

./: .gitignore  README.md  biliGlobalProgress.js
keystat/: CMakeLists.txt  README.md  show_keyboard.py  visualize.py
keystat/src/: keystatd.c
python/: merge_png_to_pdf.py  pdf_join_split.py
python/arxivgetter/: arxiv_downloader.py
python/translatemerge/: process.py
userscripts/: coloricon.js  qwentitle.js
webpages/music/: chords.html  intervals.html  omnichord.html  trainer.html
